fix: align images to left

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -389,3 +389,8 @@ a.question::before {
     display: none;
   }
 }
+
+
+.gatsby-resp-image-wrapper {
+  margin-left: inherit !important;
+}
